# vidar

./: CMakeLists.txt  Readme.md
include/: utils.hpp
include/vidar/: utils.hpp
src/: utils.cpp
tests/: test_utils.cpp
